<resources>
    <string name="app_name">New Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="emailAddress">Email Address</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="btnCheckForgotPassword">Next ></string>
    <string name="btnForgotPassword">FINISH</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="hintAnswer">Hint Answer</string>
    <string name="login">LOGIN</string>
    <string name="hallo">Hallo :</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="home"><u>Home</u></string>
    <string name="profile"><u>Profile</u></string>
    <string name="logout"><u>Logout</u></string>
</resources>
