<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorRegister"
            android:textStyle="normal|bold"
            android:text="@string/register"
            android:textSize="24sp"
            android:layout_marginBottom="6dp"/>

        <EditText
            android:id="@+id/userNameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/passwordRegister"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginBottom="4dp"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/emailAddress"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailAddress"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumber"
            android:inputType="phone"
            android:layout_marginBottom="4dp"/>

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" >
            <RadioButton
                android:id="@+id/genderMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male" />

            <RadioButton
                android:id="@+id/genderFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female" />
            <RadioButton
                android:id="@+id/unknown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Unknown" />
        </RadioGroup>

        <Spinner
            android:id="@+id/hintQuestion"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/hintAnswer"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintAnswer"
            android:inputType="textPersonName"
            android:layout_marginBottom="4dp"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />
    </LinearLayout>
</RelativeLayout>